--- a/590_MobileNetV2_for_mask_detection.ipynb
+++ b/590_MobileNetV2_for_mask_detection.ipynb
@@ -6,7 +6,7 @@
       "name": "590 MobileNetV2 for mask detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNKLZE62Jg+sDiT8sU/DX0M",
+      "authorship_tag": "ABX9TyM4Hdiq0FZeGTGmnXyMCP8p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -452,7 +452,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q_A1_p-Y75gx",
-        "outputId": "c70d6ed8-b463-4bc5-ee53-14e801c77572"
+        "outputId": "89ae90cb-a6ad-4b51-84c0-4ff1df4fb858"
       },
       "source": [
         "import pandas as pd\n",
@@ -463,15 +463,16 @@
         "                                          class_mode=\"categorical\",\n",
         "                                          classes={'nomask': 0, 'mask': 1},\n",
         "                                          batch_size=32)\n",
-        "model.evaluate(test)"
+        "model.evaluate(valid)"
       ],
-      "execution_count": 27,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Found 96 images belonging to 2 classes.\n",
-            "3/3 [==============================] - 0s 155ms/step - loss: 0.0198 - accuracy: 1.0000\n"
+            "3/3 [==============================] - 0s 159ms/step - loss: 0.0097 - accuracy: 1.0000\n",
+            "3/3 [==============================] - 0s 160ms/step - loss: 0.0074 - accuracy: 1.0000\n"
           ],
           "name": "stdout"
         },
@@ -479,13 +480,83 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.01975906826555729, 1.0]"
+              "[0.0074180844239890575, 1.0]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XEF3YuPI8_5R",
+        "outputId": "c9aaa397-72c6-4936-8196-d5cba881a3a6"
+      },
+      "source": [
+        "model.evaluate(train)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "17/17 [==============================] - 4s 231ms/step - loss: 0.0153 - accuracy: 0.9943\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.01529220212250948, 0.9942965507507324]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ooulRsrK8-YY",
+        "outputId": "8517fc87-1404-4383-f20f-73fae45fc4df"
+      },
+      "source": [
+        "model.evaluate(test)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3/3 [==============================] - 0s 164ms/step - loss: 0.1683 - accuracy: 0.9896\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.16831974685192108, 0.9895833134651184]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
         }
       ]
     },
